// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <Spinner /> has specific class dependant on size: small 1`] = `
<svg
  className="as-a-spinner as-a-spinner--small"
  viewBox="0 0 40 40"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    className="as-a-spinner__ring"
    cx="20"
    cy="20"
    fill="none"
    r="18"
    strokeLinecap="round"
    strokeWidth="3"
  />
</svg>
`;

exports[`renders <Spinner /> renders <Spinner /> component: default 1`] = `
<svg
  className="as-a-spinner as-a-spinner--large"
  viewBox="0 0 40 40"
  xmlns="http://www.w3.org/2000/svg"
>
  <circle
    className="as-a-spinner__ring"
    cx="20"
    cy="20"
    fill="none"
    r="18"
    strokeLinecap="round"
    strokeWidth="3"
  />
</svg>
`;
